...
                              indicatorColor: const Color(0x004B39EF),
                              tabs: const [
                                Tab(
                                  text: 'Sign Up',
                                ),
                                Tab(
                                  key: ValueKey('LoginTab_h4v8'),
                                  text: 'Log In',
                                ),
                              ],
                              controller: _model.tabBarController,
                              onTap: (i) async {
                                [() async {}, () async {}][i]();
                              },
...
                                Column(
                                  mainAxisSize: MainAxisSize.max,
                                  children: [
                                    SizedBox(
                                      width: 300.0,
                                      child: TextFormField(
                                        key: const ValueKey('Login-Email_bmlt'),
                                        controller:
                                            _model.loginEmailTextController,
                                        focusNode: _model.loginEmailFocusNode,
                                        onChanged: (_) => EasyDebounce.debounce(
                                          '_model.loginEmailTextController',
                                          const Duration(milliseconds: 2000),
...
                                            .asValidator(context),
                                      ),
                                    ),
                                    SizedBox(
                                      width: 300.0,
                                      child: TextFormField(
                                        key: const ValueKey('Login-Password_g2ny'),
                                        controller:
                                            _model.loginPasswordTextController,
                                        focusNode:
                                            _model.loginPasswordFocusNode,
                                        autofocus: false,
                                        textInputAction: TextInputAction.next,
...
